fix z-index

--- a/src/style.scss
+++ b/src/style.scss
@@ -35,13 +35,21 @@ body {
 }
 
 #experience-canvas {
-  position: fixed;
-  height: 100%;
   width: 100%;
+  height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
-  display: block;
-  overflow: hidden;
+  z-index: 1;
+}
+
+#css3d {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
 
 .loading-screen {
